fix: add horizontal spacing to notes tab table

--- a/static/css/apps/notes.css
+++ b/static/css/apps/notes.css
@@ -672,8 +672,8 @@ body:has(.note-page.standalone) {
    ============================================================================= */
 
 #notes-table {
-  margin-left: -1rem;
-  margin-right: -1rem;
+  margin-left: -0.25rem;
+  margin-right: -0.25rem;
 }
 
 .notes-list {
